<resources>
    <string name="app_name">New_Weather</string>
    <string name="string_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login">Login</string>
    <string name="text_or_login_with">Or Login with</string>
    <string name="content_twitter">Login with Twitter</string>
    <string name="content_facebook">Login with Facebook</string>
    <string name="correct_username">This is the correct username</string>
    <string name="no_precipitation">No Precipitation for atleast 60 min</string>
</resources>